[gd_scene load_steps=2 format=3 uid="uid://booqo47xqark2"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_2rhyy"]

[node name="Game" type="Node"]
script = ExtResource("1_2rhyy")

[node name="SpawnZombieTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="ScoreTimer" type="Timer" parent="."]
autostart = true

[node name="ScoreLabel" type="Label" parent="."]
offset_right = 1.0
offset_bottom = 23.0

[node name="DebugLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="SpawnZombieTimer" to="." method="spawn_zombie"]
[connection signal="timeout" from="ScoreTimer" to="." method="increment_score"]
